gateway-service/3-spring-gateway-service-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-gateway-service
spec:
  selector:
    app: spring-gateway-service
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30083
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-gateway-service
spec:
  selector:
    matchLabels:
      app: spring-gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-gateway-service
    spec:
      containers:
        - name: spring-gateway-service
          image: localhost:5000/spring-gateway-service
          ports:
            - containerPort: 8080
